# Shoot_em_up_Game

./: CMakeLists.txt  README.md
include/: app.rc  bullet.h  platform.h  resource.h
lib/game_loop/: game_loop.cpp  game_loop.h
lib/sprite_loader/: sprite_loader.cpp  sprite_loader.h
src/: main.cpp
